--- a/module2solution/index.html
+++ b/module2solution/index.html
@@ -1,1 +1,46 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<link rel="stylesheet" href="style.css">
+<title>Hello C</title>
+
+<style type="text/css"></style>
+</head>
+
+
+<body>
+
+
+
+<div class="container col-lg-4 col-md-6 col-sm-12">
+	<div>
+		<header class="headercontainer">Chicken</header>
+		<p>Chicken is good</p>
+	</div>
+</div>
+
+
+<div class="container col-lg-4 col-md-6 col-sm-12">
+	<div>
+		<header class="headercontainer">Beef</header>
+		<p>Beef is good</p>
+	</div>
+</div>
+
+
+<div class="container col-lg-4 col-md-12 col-sm-12">
+	<div>
+		<header class="headercontainer">Sushi</header>
+		<p>Sushi is good</p>
+		
+	</div>
+	
+</div>
+
+
+
+
+</body>
+</html>
