--- a/module2solution/index.html
+++ b/module2solution/index.html
@@ -12,28 +12,28 @@
 
 <body>
 
-
+<h1>Our Menu</h1>
 
 <div class="container col-lg-4 col-md-6 col-sm-12">
 	<div>
-		<header class="headercontainer">Chicken</header>
-		<p>Chicken is good</p>
+		<header id="pink" class="headercontainer">Chicken</header>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam aliquet purus mi, id imperdiet sem posuere nec. Fusce non nibh nunc. Proin elementum condimentum mauris, id fermentum diam egestas non. Fusce sed lacinia sapien, finibus sollicitudin dui. Etiam sed dolor eu nunc fringilla fermentum. Curabitur elementum ac nulla vitae ultricies. Aliquam sollicitudin, tellus vel lobortis consequat, libero turpis viverra lorem, quis tristique leo sapien a enim. Nulla ut mauris vitae nisi egestas mollis non non tellus. Proin fringilla sapien non aliquam dapibus. Etiam sagittis auctor nisl, eu dignissim sem interdum sit amet. Morbi interdum erat sit amet mauris consectetur porta.</p>
 	</div>
 </div>
 
 
 <div class="container col-lg-4 col-md-6 col-sm-12">
 	<div>
-		<header class="headercontainer">Beef</header>
-		<p>Beef is good</p>
+		<header id="red" class="headercontainer">Beef</header>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam aliquet purus mi, id imperdiet sem posuere nec. Fusce non nibh nunc. Proin elementum condimentum mauris, id fermentum diam egestas non. Fusce sed lacinia sapien, finibus sollicitudin dui. Etiam sed dolor eu nunc fringilla fermentum. Curabitur elementum ac nulla vitae ultricies. Aliquam sollicitudin, tellus vel lobortis consequat, libero turpis viverra lorem, quis tristique leo sapien a enim. Nulla ut mauris vitae nisi egestas mollis non non tellus. Proin fringilla sapien non aliquam dapibus. Etiam sagittis auctor nisl, eu dignissim sem interdum sit amet. Morbi interdum erat sit amet mauris consectetur porta.</p>
 	</div>
 </div>
 
 
 <div class="container col-lg-4 col-md-12 col-sm-12">
 	<div>
-		<header class="headercontainer">Sushi</header>
-		<p>Sushi is good</p>
+		<header id="gold" class="headercontainer">Sushi</header>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam aliquet purus mi, id imperdiet sem posuere nec. Fusce non nibh nunc. Proin elementum condimentum mauris, id fermentum diam egestas non. Fusce sed lacinia sapien, finibus sollicitudin dui. Etiam sed dolor eu nunc fringilla fermentum. Curabitur elementum ac nulla vitae ultricies. Aliquam sollicitudin, tellus vel lobortis consequat, libero turpis viverra lorem, quis tristique leo sapien a enim. Nulla ut mauris vitae nisi egestas mollis non non tellus. Proin fringilla sapien non aliquam dapibus. Etiam sagittis auctor nisl, eu dignissim sem interdum sit amet. Morbi interdum erat sit amet mauris consectetur porta.</p>
 		
 	</div>
 	
