--- a/module2solution/index.html
+++ b/module2solution/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <link rel="stylesheet" href="style.css">
-<title>Hello C</title>
+<title>Module 2 solution</title>
 
 <style type="text/css"></style>
 </head>
